deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: storytimeisland-website
  namespace: storytimeisland
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: storytimeisland-website
    spec:
      containers:
      - name: storytimeisland-website
        image: ${IMAGE}
        ports:
        - containerPort: 80
