deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storytimeisland-website
  namespace: storytimeisland
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: web
    protocol: TCP
  selector:
    app: storytimeisland-website
