deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-storytimeisland
  namespace: storytimeisland
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - storytimeisland.com
    - www.storytimeisland.com
    secretName: storytimeisland-ingress
  rules:
  - host: storytimeisland.com
    http:
      paths:
      - path: /
        backend:
          serviceName: storytimeisland-website
          servicePort: 80
  - host: www.storytimeisland.com
    http:
      paths:
      - path: /
        backend:
          serviceName: storytimeisland-website
          servicePort: 80
